parser/CUSTOMParser.java
// Generated from CUSTOM.g4 by ANTLR 4.9
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CUSTOMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ConstantKey=1, Int=2, Float=3, String=4, Boolean=5, Do=6, Else=7, For=8, 
		If=9, ElseIf=10, Then=11, Return=12, Void=13, While=14, Create=15, Main=16, 
		Func=17, Scan=18, Print=19, LeftParen=20, RightParen=21, LeftBracket=22, 
		RightBracket=23, LeftBrace=24, RightBrace=25, Less=26, LessEqual=27, Greater=28, 
		GreaterEqual=29, Plus=30, Minus=31, Star=32, Div=33, Mod=34, AndAnd=35, 
		OrOr=36, Not=37, Colon=38, Semi=39, Comma=40, Assign=41, Equal=42, NotEqual=43, 
		Dot=44, Ellipsis=45, Up=46, Down=47, To=48, True=49, False=50, Break=51, 
		DoubleQuotation=52, INTEGERCONSTANT=53, FLOATCONSTANT=54, BOOLCONSTANT=55, 
		STRINGCONSTANT=56, IDENTIFIER=57, WHITSPACE=58, NEWLINE=59, BLOCKCOMMENT=60, 
		LINECOMMENT=61;
	public static final int
		RULE_program = 0, RULE_mainBlock = 1, RULE_funcBlock = 2, RULE_declarationList = 3, 
		RULE_declaration = 4, RULE_arrayDeclaration = 5, RULE_arrayDeclarationList = 6, 
		RULE_arrayDeclarationInitialize = 7, RULE_arrayDeclarationIdentifier = 8, 
		RULE_variableDeclaration = 9, RULE_scopedVariableDeclaration = 10, RULE_variableDeclarationList = 11, 
		RULE_variableDeclarationInitialize = 12, RULE_variableDeclarationIdentifier = 13, 
		RULE_typeSpecifier = 14, RULE_arrayTypeSpecifier = 15, RULE_params = 16, 
		RULE_paramList = 17, RULE_paramTypeList = 18, RULE_paramDeclarationIdentifer = 19, 
		RULE_statement = 20, RULE_scanStatement = 21, RULE_printStatement = 22, 
		RULE_printStatementList = 23, RULE_expressionStatement = 24, RULE_compoundStatement = 25, 
		RULE_localDeclarations = 26, RULE_selectionStatement = 27, RULE_selectionStatementList = 28, 
		RULE_statementList = 29, RULE_iterationStatement = 30, RULE_whileStatement = 31, 
		RULE_forStatement = 32, RULE_loopDeclaration = 33, RULE_returnStatement = 34, 
		RULE_expression = 35, RULE_simpleExpression = 36, RULE_arrayExpression = 37, 
		RULE_andExpression = 38, RULE_unaryRelExpression = 39, RULE_relExpression = 40, 
		RULE_relop = 41, RULE_sumExpression = 42, RULE_sumop = 43, RULE_mulExpression = 44, 
		RULE_mulop = 45, RULE_unaryExpression = 46, RULE_unaryop = 47, RULE_factor = 48, 
		RULE_mutable = 49, RULE_immutable = 50, RULE_call = 51, RULE_args = 52, 
		RULE_argList = 53, RULE_constant = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "mainBlock", "funcBlock", "declarationList", "declaration", 
			"arrayDeclaration", "arrayDeclarationList", "arrayDeclarationInitialize", 
			"arrayDeclarationIdentifier", "variableDeclaration", "scopedVariableDeclaration", 
			"variableDeclarationList", "variableDeclarationInitialize", "variableDeclarationIdentifier", 
			"typeSpecifier", "arrayTypeSpecifier", "params", "paramList", "paramTypeList", 
			"paramDeclarationIdentifer", "statement", "scanStatement", "printStatement", 
			"printStatementList", "expressionStatement", "compoundStatement", "localDeclarations", 
			"selectionStatement", "selectionStatementList", "statementList", "iterationStatement", 
			"whileStatement", "forStatement", "loopDeclaration", "returnStatement", 
			"expression", "simpleExpression", "arrayExpression", "andExpression", 
			"unaryRelExpression", "relExpression", "relop", "sumExpression", "sumop", 
			"mulExpression", "mulop", "unaryExpression", "unaryop", "factor", "mutable", 
			"immutable", "call", "args", "argList", "constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'constant'", "'int'", "'float'", "'String'", "'bool'", "'do'", 
			"'else'", "'for'", "'if'", "'else if'", "'then'", "'return'", "'void'", 
			"'while'", "'create'", "'main'", "'func'", "'scan'", "'print'", "'('", 
			"')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "':'", "';'", "','", 
			"'='", "'=='", "'!='", "'.'", "'...'", "'up'", "'down'", "'to'", "'T'", 
			"'F'", "'break'", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ConstantKey", "Int", "Float", "String", "Boolean", "Do", "Else", 
			"For", "If", "ElseIf", "Then", "Return", "Void", "While", "Create", "Main", 
			"Func", "Scan", "Print", "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
			"LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
			"Plus", "Minus", "Star", "Div", "Mod", "AndAnd", "OrOr", "Not", "Colon", 
			"Semi", "Comma", "Assign", "Equal", "NotEqual", "Dot", "Ellipsis", "Up", 
			"Down", "To", "True", "False", "Break", "DoubleQuotation", "INTEGERCONSTANT", 
			"FLOATCONSTANT", "BOOLCONSTANT", "STRINGCONSTANT", "IDENTIFIER", "WHITSPACE", 
			"NEWLINE", "BLOCKCOMMENT", "LINECOMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CUSTOM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CUSTOMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public MainBlockContext mainBlock() {
			return getRuleContext(MainBlockContext.class,0);
		}
		public List<FuncBlockContext> funcBlock() {
			return getRuleContexts(FuncBlockContext.class);
		}
		public FuncBlockContext funcBlock(int i) {
			return getRuleContext(FuncBlockContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			mainBlock();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Func) {
				{
				{
				setState(111);
				funcBlock();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainBlockContext extends ParserRuleContext {
		public TerminalNode Main() { return getToken(CUSTOMParser.Main, 0); }
		public TerminalNode LeftParen() { return getToken(CUSTOMParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(CUSTOMParser.RightParen, 0); }
		public TerminalNode LeftBrace() { return getToken(CUSTOMParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(CUSTOMParser.RightBrace, 0); }
		public List<DeclarationListContext> declarationList() {
			return getRuleContexts(DeclarationListContext.class);
		}
		public DeclarationListContext declarationList(int i) {
			return getRuleContext(DeclarationListContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).enterMainBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).exitMainBlock(this);
		}
	}

	public final MainBlockContext mainBlock() throws RecognitionException {
		MainBlockContext _localctx = new MainBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(Main);
			setState(118);
			match(LeftParen);
			setState(119);
			match(RightParen);
			setState(120);
			match(LeftBrace);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ConstantKey) | (1L << Int) | (1L << Float) | (1L << String) | (1L << Boolean) | (1L << For) | (1L << If) | (1L << Return) | (1L << While) | (1L << Create) | (1L << Scan) | (1L << Print) | (1L << LeftParen) | (1L << LeftBrace) | (1L << Minus) | (1L << Not) | (1L << Semi) | (1L << True) | (1L << False) | (1L << INTEGERCONSTANT) | (1L << FLOATCONSTANT) | (1L << STRINGCONSTANT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(123);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ConstantKey:
				case Int:
				case Float:
				case String:
				case Boolean:
					{
					setState(121);
					declarationList(0);
					}
					break;
				case For:
				case If:
				case Return:
				case While:
				case Create:
				case Scan:
				case Print:
				case LeftParen:
				case LeftBrace:
				case Minus:
				case Not:
				case Semi:
				case True:
				case False:
				case INTEGERCONSTANT:
				case FLOATCONSTANT:
				case STRINGCONSTANT:
				case IDENTIFIER:
					{
					setState(122);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncBlockContext extends ParserRuleContext {
		public TerminalNode Func() { return getToken(CUSTOMParser.Func, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CUSTOMParser.IDENTIFIER, 0); }
		public TerminalNode LeftParen() { return getToken(CUSTOMParser.LeftParen, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(CUSTOMParser.RightParen, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public ArrayTypeSpecifierContext arrayTypeSpecifier() {
			return getRuleContext(ArrayTypeSpecifierContext.class,0);
		}
		public TerminalNode Void() { return getToken(CUSTOMParser.Void, 0); }
		public FuncBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).enterFuncBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).exitFuncBlock(this);
		}
	}

	public final FuncBlockContext funcBlock() throws RecognitionException {
		FuncBlockContext _localctx = new FuncBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcBlock);
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(Func);
				setState(133);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(131);
					typeSpecifier();
					}
					break;
				case 2:
					{
					setState(132);
					arrayTypeSpecifier();
					}
					break;
				}
				setState(135);
				match(IDENTIFIER);
				setState(136);
				match(LeftParen);
				setState(137);
				params();
				setState(138);
				match(RightParen);
				setState(139);
				statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(Func);
				setState(142);
				match(Void);
				setState(143);
				match(IDENTIFIER);
				setState(144);
				match(LeftParen);
				setState(145);
				params();
				setState(146);
				match(RightParen);
				setState(147);
				statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationListContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarationListContext declarationList() {
			return getRuleContext(DeclarationListContext.class,0);
		}
		public DeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).enterDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).exitDeclarationList(this);
		}
	}

	public final DeclarationListContext declarationList() throws RecognitionException {
		return declarationList(0);
	}

	private DeclarationListContext declarationList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DeclarationListContext _localctx = new DeclarationListContext(_ctx, _parentState);
		DeclarationListContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_declarationList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(152);
			declaration();
			}
			_ctx.stop = _input.LT(-1);
			setState(158);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclarationListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_declarationList);
					setState(154);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(155);
					declaration();
					}
					} 
				}
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public TerminalNode Semi() { return getToken(CUSTOMParser.Semi, 0); }
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				arrayDeclaration();
				setState(162);
				match(Semi);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				variableDeclaration();
				setState(165);
				match(Semi);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(167);
				arrayDeclaration();
				notifyErrorListeners("Missing ;");
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				variableDeclaration();
				notifyErrorListeners("Missing ;");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclarationContext extends ParserRuleContext {
		public ArrayTypeSpecifierContext arrayTypeSpecifier() {
			return getRuleContext(ArrayTypeSpecifierContext.class,0);
		}
		public ArrayDeclarationListContext arrayDeclarationList() {
			return getRuleContext(ArrayDeclarationListContext.class,0);
		}
		public ArrayDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).enterArrayDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).exitArrayDeclaration(this);
		}
	}

	public final ArrayDeclarationContext arrayDeclaration() throws RecognitionException {
		ArrayDeclarationContext _localctx = new ArrayDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			arrayTypeSpecifier();
			setState(176);
			arrayDeclarationList(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclarationListContext extends ParserRuleContext {
		public ArrayDeclarationInitializeContext arrayDeclarationInitialize() {
			return getRuleContext(ArrayDeclarationInitializeContext.class,0);
		}
		public ArrayDeclarationListContext arrayDeclarationList() {
			return getRuleContext(ArrayDeclarationListContext.class,0);
		}
		public TerminalNode Comma() { return getToken(CUSTOMParser.Comma, 0); }
		public ArrayDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).enterArrayDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).exitArrayDeclarationList(this);
		}
	}

	public final ArrayDeclarationListContext arrayDeclarationList() throws RecognitionException {
		return arrayDeclarationList(0);
	}

	private ArrayDeclarationListContext arrayDeclarationList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArrayDeclarationListContext _localctx = new ArrayDeclarationListContext(_ctx, _parentState);
		ArrayDeclarationListContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_arrayDeclarationList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(179);
			arrayDeclarationInitialize();
			}
			_ctx.stop = _input.LT(-1);
			setState(186);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ArrayDeclarationListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_arrayDeclarationList);
					setState(181);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(182);
					match(Comma);
					setState(183);
					arrayDeclarationInitialize();
					}
					} 
				}
				setState(188);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArrayDeclarationInitializeContext extends ParserRuleContext {
		public ArrayDeclarationIdentifierContext arrayDeclarationIdentifier() {
			return getRuleContext(ArrayDeclarationIdentifierContext.class,0);
		}
		public TerminalNode Assign() { return getToken(CUSTOMParser.Assign, 0); }
		public ArrayExpressionContext arrayExpression() {
			return getRuleContext(ArrayExpressionContext.class,0);
		}
		public ArrayDeclarationInitializeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclarationInitialize; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).enterArrayDeclarationInitialize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CUSTOMListener ) ((CUSTOMListener)listener).exitArrayDeclarationInitialize(this);
		}
	}
